--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Leon-Arno Portfolio",
+  "name": "Leon-Arno-Portfolio",
   "version": "1.0.0",
   "description": "Initial portfolio with bootstrap",
   "main": "index.js",
